fix: contrast aspect ratio

--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ layer(base);
   --font-mono: 'Inter', serif;
   --font-serif: 'Inter', serif;
 
-  --roseville: hsl(69, 48%, 34%);
-  --roseville-primary: hsl(69, 69%, 25%);
+  --roseville: hsl(69, 48%, 24%);
+  --roseville-primary: hsl(69, 70%, 21%);
   --roseville-accent: hsl(88, 38.5%, 15.3%);
   --roseville-background: hsl(76, 19%, 89%);
 
